Added restart button

--- a/Samurai.html
+++ b/Samurai.html
@@ -7,10 +7,26 @@
     <title>Samurai Game</title>
 </head>
 <body>
-    <canvas> </canvas>
-    <button id="attack">
-        Attack
+    <div class="canCon">
+        <canvas>
+        </canvas>
+        <button class="restartBtn hide">Restart</button>
+    </div>
+    <div class="btnContainer">
+    <button class="btn" id="a">
+        A1
     </button>
+    <button class="btn" id="q">
+        A2
+    </button>
+    <button class="btn" id="z">
+        A3
+    </button>
+    <button class="btn" id="ArrowUp">
+        Jump
+    </button>
+    </div>
+ 
     <img id="img" src="./images/spritesheet(2).png">
     <img id="backimg" src="/images/background2.jpg"> 
     <img  id='enemyImg' src="/images/enemy1.png">
