--- a/Samurai.html
+++ b/Samurai.html
@@ -7,6 +7,24 @@
     <title>Samurai Game</title>
 </head>
 <body>
+    <div class="instruction">
+        <h2>Samurai Slasher</h2>
+        <div>How to play</div>
+        <div class="htp">
+       <span><h4>On Pc:</h4></span>
+        <ul>
+   <li>Press the A key for atk1</li>
+   <li>Press the Q key for atk2</li>
+   <li>Press the Z key for atk3</li>
+   <li>Press the ArrowUp key to jump</li>
+            </ul>
+    <span><h4>On Mobile:</h4></span>
+    <ul>Just press the buttons </ul>
+        </div>
+ <button class="start">Start</button>
+    </div>
+    
+    <div class="game hide">
     <div class="canCon">
         <canvas>
         </canvas>
@@ -26,7 +44,7 @@
         Jump
     </button>
     </div>
- 
+ </div>
     <img id="img" src="./images/spritesheet(2).png">
     <img id="backimg" src="/images/background2.jpg"> 
     <img  id='enemyImg' src="/images/enemy1.png">
