Fixed Restart Function

--- a/Samurai.html
+++ b/Samurai.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="instruction">
-        <h2>Samurai Slasher</h2>
+        <h2>Samurai Game</h2>
         <div>How to play</div>
         <div class="htp">
        <span><h4>On Pc:</h4></span>
@@ -19,11 +19,11 @@
    <li>Press the ArrowUp key to jump</li>
             </ul>
     <span><h4>On Mobile:</h4></span>
-    <ul>Just press the buttons </ul>
+    <ul>Just press the buttons 😅</ul>
         </div>
  <button class="start">Start</button>
     </div>
-    
+
     <div class="game hide">
     <div class="canCon">
         <canvas>
